--- a/style.css
+++ b/style.css
@@ -184,6 +184,10 @@ header li {
     padding: 5px 0;
 }
 
+.news .sp_br {
+    display: none;
+}
+
 /* --------------------------------------------------------------
     WORKS
 -------------------------------------------------------------- */
@@ -235,4 +239,94 @@ footer p {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+/* --------------------------------------------------------------
+    メディアクエリ
+-------------------------------------------------------------- */
+
+@media (max-width: 1000px) {
+
+/* --------------------------------------------------------------
+    ヘッダー
+-------------------------------------------------------------- */
+    
+    header ul {
+        display: none;
+    }
+
+/* --------------------------------------------------------------
+    WORKS
+-------------------------------------------------------------- */
+
+    .work-card {
+        width: 50%;
+    }
+
+}
+
+@media (max-width: 670px) {
+    
+/* --------------------------------------------------------------
+    メインビジュアル
+-------------------------------------------------------------- */
+
+    .mainvisual h2 {
+        font-size: 28px;
+    }
+
+    .mainvisual {
+        height: 40vh;
+    }
+
+/* --------------------------------------------------------------
+    WORKS
+-------------------------------------------------------------- */
+
+}
+
+@media (max-width: 670px) {
+
+/* --------------------------------------------------------------
+    メインビジュアル
+-------------------------------------------------------------- */
+
+    .mainvisual h2 {
+        font-size: 20px;
+    }
+
+/* --------------------------------------------------------------
+    ABOUT
+-------------------------------------------------------------- */
+
+    .about .sp_br {
+        display: none;
+    }
+    
+/* --------------------------------------------------------------
+    NEWS
+-------------------------------------------------------------- */
+
+    .news .sp_br {
+        display: block;
+    }
+
+    .news .inner {
+        text-align: left;
+        margin: auto;
+    }
+
+/* --------------------------------------------------------------
+    WORKS
+-------------------------------------------------------------- */
+
+    .works-card-wrapper {
+        display: block;
+    }
+
+    .work-card {
+        width: 100%;
+        margin: 20px 0;
+    }
+
 }
