--- a/style.css
+++ b/style.css
@@ -76,6 +76,10 @@ li {
     margin: 30px auto 60px;
 }
 
+.wrap {
+    overflow: hidden;
+} /*body内全体をwrapしてoverflow hidden するとレスポンシブで生じる右側余白を消すことができる*/
+
 /* --------------------------------------------------------------
     ヘッダー
 -------------------------------------------------------------- */
