--- a/style.css
+++ b/style.css
@@ -174,7 +174,11 @@ header li {
     NEWS
 -------------------------------------------------------------- */
 
-.news .inner {
+.news .inner .h2 {
+    text-align: center;
+}
+
+.news .inner ul {
     text-align: left;
     margin: 0 100px; /*レスポンシブで幅全部に修正しないといけない*/
 }
