--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ h3 {
     text-align: center;
 }
 
-p, a {
+p {
     margin: 0;
     padding: 0;
     font-size: 18px;
@@ -46,6 +46,9 @@ p, a {
 }
 
 a {
+    margin: 0;
+    padding: 0;
+    font-size: 18px;
     text-decoration: none; /*リンクにアンダーラインとかあったりするやつ*/
 }
 
@@ -114,6 +117,10 @@ header ul {
 
 header li {
     margin: 0 20px;
+}
+
+header li a {
+    color: #fff;
 }
 
 /* --------------------------------------------------------------
