--- a/Css/footer.css
+++ b/Css/footer.css
@@ -12,6 +12,7 @@ footer p {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 /*# sourceMappingURL=footer.css.map */
