--- a/Css/mainvisual.scss
+++ b/Css/mainvisual.scss
@@ -2,11 +2,19 @@
     メインビジュアル
 -------------------------------------------------------------- */
 
+@import "response.scss";
+
 .mainvisual {
     background-image: url(../image/mathematics-1.jpg); /*画像を要素として使いたいならhtml <img>*/
     background-size: cover;
     background-position: 25% 75%;
     position: relative;
+
+    .inner {
+        @include mq ($sp) {
+            padding: 0;
+        }
+    }
 
     h2 {
         text-align: center;
@@ -22,6 +30,10 @@
         opacity : 0;
         transform: translateY(20px);
         transition: all 1s;
+        
+        @include mq ($sp) {
+            font-size: 20px;
+        }
     }
 
     &::before {
@@ -32,6 +44,49 @@
         bottom: 0;
         left: 0;
         content: ' ';
+    }
+
+    .span {
+        @include mq ($tab) {
+            font-size: 32px;
+        }
+
+        @include mq ($sp) {
+            font-size: 18px;
+        }
+    }
+}
+
+#mask {
+    display: none;
+    background-color:rgba(0, 0, 0, 0.5);
+    position: fixed; // この使い方覚えておきたい所
+    z-index: 1;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+#side-menu {
+    display: none;
+    z-index: 2;
+    background-color: #343a40;
+    position: absolute;
+    top: 0;
+    right: 0;
+    // transform: translate(200px, 0);
+
+    li {
+        a {
+            display: inline-block;
+            color: white;
+            margin: 10px 50px;
+        }
+
+        &:last-child {
+            margin-bottom: 30px;
+        }
     }
 }
 
