--- a/Css/response.css
+++ b/Css/response.css
@@ -1,63 +1,1 @@
-@charset "UTF-8";
-@media (max-width: 1000px) {
-  /* --------------------------------------------------------------
-        ヘッダー
-    -------------------------------------------------------------- */
-  header ul {
-    display: none;
-  }
-  /* --------------------------------------------------------------
-        メインビジュアル
-    -------------------------------------------------------------- */
-  .mainvisual span {
-    font-size: 32px;
-  }
-  /* --------------------------------------------------------------
-        WORKS
-    -------------------------------------------------------------- */
-  .work-card {
-    width: 50%;
-  }
-}
-
-@media (max-width: 670px) {
-  /* --------------------------------------------------------------
-        メインビジュアル
-    -------------------------------------------------------------- */
-  .mainvisual .inner {
-    padding: 0;
-  }
-  .mainvisual h2 {
-    font-size: 20px;
-  }
-  .mainvisual span {
-    font-size: 18px;
-  }
-  /* --------------------------------------------------------------
-        ABOUT
-    -------------------------------------------------------------- */
-  .about .sp_br {
-    display: none;
-  }
-  /* --------------------------------------------------------------
-        NEWS
-    -------------------------------------------------------------- */
-  .news .sp_br {
-    display: block;
-  }
-  .news .inner ul {
-    text-align: left;
-    margin: 0 auto;
-  }
-  /* --------------------------------------------------------------
-        WORKS
-    -------------------------------------------------------------- */
-  .works-card-wrapper {
-    display: block !important;
-  }
-  .work-card {
-    width: 100%;
-    margin: 20px 0;
-  }
-}
-/*# sourceMappingURL=response.css.map */
+/* No CSS *//*# sourceMappingURL=response.css.map */
