--- a/Css/style.scss
+++ b/Css/style.scss
@@ -2,6 +2,8 @@
     全体構造
 -------------------------------------------------------------- */
 
+@import "response.scss";
+
 html {
     margin: 0;
     padding: 0;
@@ -29,6 +31,10 @@ h1 {
 h2 {
     font-size: 28px;
     text-align: center;
+
+    @include mq ($sp) {
+        font-size: 20px;
+    }
 }
 
 h3 {
@@ -52,6 +58,7 @@ a {
 
 a:hover {
     opacity: 0.7; /*opacity: 不透明度*/
+    transition: 0.3s;
 }
 
 ul {
