--- a/Css/about.css
+++ b/Css/about.css
@@ -1,69 +1,6 @@
-@charset "UTF-8";
 /* --------------------------------------------------------------
     ABOUT
 -------------------------------------------------------------- */
-@media (max-width: 1000px) {
-  /* --------------------------------------------------------------
-        ヘッダー
-    -------------------------------------------------------------- */
-  header ul {
-    display: none;
-  }
-  /* --------------------------------------------------------------
-        メインビジュアル
-    -------------------------------------------------------------- */
-  .mainvisual span {
-    font-size: 32px;
-  }
-  /* --------------------------------------------------------------
-        WORKS
-    -------------------------------------------------------------- */
-  .work-card {
-    width: 50%;
-  }
-}
-
-@media (max-width: 670px) {
-  /* --------------------------------------------------------------
-        メインビジュアル
-    -------------------------------------------------------------- */
-  .mainvisual .inner {
-    padding: 0;
-  }
-  .mainvisual h2 {
-    font-size: 20px;
-  }
-  .mainvisual span {
-    font-size: 18px;
-  }
-  /* --------------------------------------------------------------
-        ABOUT
-    -------------------------------------------------------------- */
-  .about .sp_br {
-    display: none;
-  }
-  /* --------------------------------------------------------------
-        NEWS
-    -------------------------------------------------------------- */
-  .news .sp_br {
-    display: block;
-  }
-  .news .inner ul {
-    text-align: left;
-    margin: 0 auto;
-  }
-  /* --------------------------------------------------------------
-        WORKS
-    -------------------------------------------------------------- */
-  .works-card-wrapper {
-    display: block !important;
-  }
-  .work-card {
-    width: 100%;
-    margin: 20px 0;
-  }
-}
-
 .about {
   background-color: #e2e4e4;
 }
@@ -72,8 +9,10 @@
   line-height: 2.5;
 }
 
-.about span {
-  color: red;
+@media (max-width: 670px) {
+  .about p {
+    text-align: left;
+  }
 }
 
 @media (max-width: 670px) {
