--- a/Css/news.scss
+++ b/Css/news.scss
@@ -8,6 +8,11 @@
     
     .inner {
 
+        @include mq ($sp) {
+            padding-left: 20px;
+            padding-right: 20px;
+        }
+
         h2 {
             text-align: center;
         }
@@ -29,6 +34,10 @@
 
             display: flex;
             justify-content: space-between;
+
+            @include mq ($sp) {
+                display: block;
+            }
 
             .content {
                 text-align: left;
