--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ h1, h2, h3, h4 {
   margin: 0;
   padding: 0;
   color: #666666;
+  font-family: "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro", Arial, "MS ゴシック", sans-serif;
 }
 
 p, a {
@@ -23,6 +24,7 @@ p, a {
   padding: 0;
   font-size: 1rem;
   color: #666666;
+  font-family: "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro", Arial, "MS ゴシック", sans-serif;
 }
 
 a {
